img path update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-center p-5">
               <div class="brand-logo">
-                <img src="../../assets/images/logo.png">
+                <img src="assets/images/logo.png">
               </div>
               
               <h4><a href="/pages/super-admin/dashboard.html"> Super Admin screens</a></h4>
@@ -65,11 +65,11 @@
   </div>
   <!-- container-scroller -->
   <!-- Js Plugins -->
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.nice-select.min.js"></script>
-  <script src="js/jquery-ui.min.js"></script>
-  <script src="js/jquery.slicknav.js"></script>
+  <script src="assets/js/jquery-3.3.1.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/jquery.nice-select.min.js"></script>
+  <script src="assets/js/jquery-ui.min.js"></script>
+  <script src="assets/js/jquery.slicknav.js"></script>
   <!-- plugins:js -->
   <script src="assets/vendors/js/vendor.bundle.base.js"></script>
   <!-- endinject -->
