--- a/pages/coach/add_users.html
+++ b/pages/coach/add_users.html
@@ -68,7 +68,7 @@
                            
                           <tr>
                             <td style="width: 100%;">
-                              <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> David Grey <br><br>
+                              <img src="../../assets/images/faces/face1.jpg" class="me-2" alt="image"> David Grey <br><br>
                                david@gmail.com
                             </td>
                             <td  style="width: 100%;"></td><td style="width: 100%;"></td>
@@ -76,7 +76,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face2.jpg" class="me-2" alt="image" > Stella Johnson  <br><br>
+                              <img src="../../assets/images/faces/face2.jpg" class="me-2" alt="image" > Stella Johnson  <br><br>
                               stella@gmail.com
                             </td>
                             <td></td><td></td>
@@ -84,7 +84,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face3.jpg" class="me-2" alt="image"> Marina Michel  <br><br>
+                              <img src="../../assets/images/faces/face3.jpg" class="me-2" alt="image"> Marina Michel  <br><br>
                               Marina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -92,7 +92,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> John Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> John Doe <br><br>
                               Marina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -100,7 +100,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -108,7 +108,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -116,7 +116,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -124,7 +124,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -132,7 +132,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -140,7 +140,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -148,7 +148,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -156,7 +156,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -164,7 +164,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -172,7 +172,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -180,7 +180,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -188,7 +188,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -196,7 +196,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -204,7 +204,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -212,7 +212,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
