--- a/pages/coach/dashboard.html
+++ b/pages/coach/dashboard.html
@@ -63,7 +63,7 @@
                 <div class="card" style="height: 100%; text-align: center;">
                   <div class="card-body">
                     <h4 class="card-title">Your Profile</h4>
-                    <a href="add_programs.html"><img src="\assets/images/faces/profile.png" alt="image" /></a>
+                    <a href="add_programs.html"><img src="../../assets/images/faces/profile.png" alt="image" /></a>
                     <h6 class="card-text">Good Morning Mohan</h6>
                     <p style="font-size: 11px;">continue your journey and achieve Your Target</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
