--- a/pages/coach/report_generation.html
+++ b/pages/coach/report_generation.html
@@ -115,7 +115,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -140,7 +140,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -165,7 +165,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -192,7 +192,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -217,7 +217,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -242,7 +242,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -269,7 +269,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -294,7 +294,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -319,7 +319,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -344,7 +344,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -369,7 +369,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -394,7 +394,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -419,7 +419,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -444,7 +444,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
@@ -469,7 +469,7 @@
                               <div class="row">
                                 <div class="col-md-3">
                                   <img
-                                    src="\assets/images/faces/report.png"
+                                    src="../../assets/images/faces/report.png"
                                     class="me-2"
                                     alt="image"
                                   />
