--- a/pages/super-admin/add_users.html
+++ b/pages/super-admin/add_users.html
@@ -68,7 +68,7 @@
                            
                           <tr>
                             <td style="width: 100%;">
-                              <img src="\assets/images/faces/face1.jpg" class="me-2" alt="image"> David Grey <br><br>
+                              <img src="../../assets/images/faces/face1.jpg" class="me-2" alt="image"> David Grey <br><br>
                                david@gmail.com
                             </td>
                             <td  style="width: 100%;"></td><td style="width: 100%;"></td>
@@ -76,7 +76,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face2.jpg" class="me-2" alt="image" > Stella Johnson  <br><br>
+                              <img src="../../assets/images/faces/face2.jpg" class="me-2" alt="image" > Stella Johnson  <br><br>
                               stella@gmail.com
                             </td>
                             <td></td><td></td>
@@ -84,7 +84,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face3.jpg" class="me-2" alt="image"> Marina Michel  <br><br>
+                              <img src="../../assets/images/faces/face3.jpg" class="me-2" alt="image"> Marina Michel  <br><br>
                               Marina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -92,7 +92,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> John Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> John Doe <br><br>
                               Marina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -100,7 +100,95 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              Karina@gmail.com
+                            </td>
+                            <td></td><td></td>
+                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -116,7 +204,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
@@ -124,95 +212,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
-                              Karina@gmail.com
-                            </td>
-                            <td></td><td></td>
-                            <td> <button type="button" class="btn1 btn-gradient-primary btn-rounded btn-fw">Edit</button></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <img src="\assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
+                              <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> Karina Doe <br><br>
                               Karina@gmail.com
                             </td>
                             <td></td><td></td>
