--- a/pages/coach/add_memberships.html
+++ b/pages/coach/add_memberships.html
@@ -68,7 +68,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership (Challenge Female Gym 4 days)</a></h5>
                           <div class="progress">
@@ -98,7 +98,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
@@ -130,7 +130,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
@@ -159,7 +159,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
@@ -191,7 +191,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
@@ -220,7 +220,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
