--- a/pages/coach/add_programs.html
+++ b/pages/coach/add_programs.html
@@ -70,7 +70,7 @@
                 <div class="card card-img-holder">
                   <div class="card-body">
                     
-                    <a href="add_workouts.html"><img src="\assets/images/faces/program.png" alt="image" /></a>
+                    <a href="add_workouts.html"><img src="../../assets/images/faces/program.png" alt="image" /></a>
 
                       <h5 class="mt-3"> <a href="add_workouts.html">Phase 1</a></h5>
                       <div class="progress">
@@ -100,7 +100,7 @@
                 <div class="card card-img-holder">
                   <div class="card-body">
                     
-                    <a href="add_workouts.html"><img src="\assets/images/faces/program.png" alt="image" /></a>
+                    <a href="add_workouts.html"><img src="../../assets/images/faces/program.png" alt="image" /></a>
 
                       <h5 class="mt-3"> <a href="add_workouts.html">Phase 2</a></h5>
                       <div class="progress">
