--- a/pages/coach/base-header.html
+++ b/pages/coach/base-header.html
@@ -4,11 +4,11 @@
   <div
     class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center"
   >
-    <a class="navbar-brand brand-logo" href="\index.html"
-      ><img src="\assets/images/logo.png" alt="logo"
+    <a class="navbar-brand brand-logo" href="index.html"
+      ><img src="../../assets/images/logo.png" alt="logo"
     /></a>
-    <a class="navbar-brand brand-logo-mini" href="\index.html"
-      ><img src="\assets/images/logo-mini.svg" alt="logo"
+    <a class="navbar-brand brand-logo-mini" href="index.html"
+      ><img src="../../assets/images/logo-mini.svg" alt="logo"
     /></a>
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-stretch">
