--- a/pages/coach/support_tickets.html
+++ b/pages/coach/support_tickets.html
@@ -84,7 +84,7 @@
                           <div class="row">
                             <div class="col-md-12">
                               <img
-                                src="\assets/images/faces/support-ticket.png"
+                                src="../../assets/images/faces/support-ticket.png"
                                 class="me-2"
                                 alt="image"
                               />
@@ -109,60 +109,7 @@
                           <div class="row">
                             <div class="col-md-12">
                               <img
-                                src="\assets/images/faces/support-ticket.png"
-                                class="me-2"
-                                alt="image"
-                              />
-                              <p class="card-label mt-4">
-                                Ticket #828792
-                                <a href="your-file-path">Download</a>
-                              </p>
-                              <label for="info" class="card-label"
-                                >Mohan Mahanama: mahanama@gmail.com</label
-                              >
-                              <label for="date" class="card-label"
-                                >April 3, 2023
-                              </label>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card card-img-holder">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-md-12">
-                              <img
-                                src="\assets/images/faces/support-ticket.png"
-                                class="me-2"
-                                alt="image"
-                              />
-                              <p class="card-label mt-4">
-                                Ticket #828792
-                                <a href="your-file-path">Download</a>
-                              </p>
-                              <label for="info" class="card-label"
-                                >Mohan Mahanama: mahanama@gmail.com</label
-                              >
-                              <label for="date" class="card-label"
-                                >April 3, 2023
-                              </label>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card card-img-holder">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-md-12">
-                              <img
-                                src="\assets/images/faces/support-ticket.png"
+                                src="../../assets/images/faces/support-ticket.png"
                                 class="me-2"
                                 alt="image"
                               />
@@ -190,7 +137,7 @@
                           <div class="row">
                             <div class="col-md-12">
                               <img
-                                src="\assets/images/faces/support-ticket.png"
+                                src="../../assets/images/faces/support-ticket.png"
                                 class="me-2"
                                 alt="image"
                               />
@@ -215,7 +162,60 @@
                           <div class="row">
                             <div class="col-md-12">
                               <img
-                                src="\assets/images/faces/support-ticket.png"
+                                src="../../assets/images/faces/support-ticket.png"
+                                class="me-2"
+                                alt="image"
+                              />
+                              <p class="card-label mt-4">
+                                Ticket #828792
+                                <a href="your-file-path">Download</a>
+                              </p>
+                              <label for="info" class="card-label"
+                                >Mohan Mahanama: mahanama@gmail.com</label
+                              >
+                              <label for="date" class="card-label"
+                                >April 3, 2023
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card card-img-holder">
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="col-md-12">
+                              <img
+                                src="../../assets/images/faces/support-ticket.png"
+                                class="me-2"
+                                alt="image"
+                              />
+                              <p class="card-label mt-4">
+                                Ticket #828792
+                                <a href="your-file-path">Download</a>
+                              </p>
+                              <label for="info" class="card-label"
+                                >Mohan Mahanama: mahanama@gmail.com</label
+                              >
+                              <label for="date" class="card-label"
+                                >April 3, 2023
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card card-img-holder">
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="col-md-12">
+                              <img
+                                src="../../assets/images/faces/support-ticket.png"
                                 class="me-2"
                                 alt="image"
                               />
