--- a/pages/super-admin/add_memberships.html
+++ b/pages/super-admin/add_memberships.html
@@ -74,7 +74,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership (Challenge Female Gym 4 days)</a></h5>
                           <div class="progress">
@@ -104,7 +104,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
@@ -136,7 +136,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
@@ -165,7 +165,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
@@ -197,7 +197,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
@@ -226,7 +226,7 @@
                     <div class="col-md-6 stretch-card grid-margin">
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
-                          <a href="add_programs.html"><img src="\assets/images/faces/member-card.png" alt="image" /></a>
+                          <a href="add_programs.html"><img src="../../assets/images/faces/member-card.png" alt="image" /></a>
                           <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
                           <h5 class="mt-3"><a href="add_programs.html">Membership name</a></h5>
                           <div class="progress">
