--- a/pages/super-admin/support_tickets.html
+++ b/pages/super-admin/support_tickets.html
@@ -72,7 +72,7 @@
                           <div class="row">
                             <div class="col-md-12">
                               <img
-                                src="\assets/images/faces/support-ticket.png"
+                                src="../../assets/images/faces/support-ticket.png"
                                 class="me-2"
                                 alt="image"
                               />
@@ -97,60 +97,7 @@
                           <div class="row">
                             <div class="col-md-12">
                               <img
-                                src="\assets/images/faces/support-ticket.png"
-                                class="me-2"
-                                alt="image"
-                              />
-                              <p class="card-label mt-4">
-                                Ticket #828792
-                                <a href="your-file-path">Download</a>
-                              </p>
-                              <label for="info" class="card-label"
-                                >Sara Carol: saracarol@gmail.com</label
-                              >
-                              <label for="date" class="card-label"
-                                >April 3, 2023
-                              </label>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card card-img-holder">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-md-12">
-                              <img
-                                src="\assets/images/faces/support-ticket.png"
-                                class="me-2"
-                                alt="image"
-                              />
-                              <p class="card-label mt-4">
-                                Ticket #828792
-                                <a href="your-file-path">Download</a>
-                              </p>
-                              <label for="info" class="card-label"
-                                >Sara Carol: saracarol@gmail.com</label
-                              >
-                              <label for="date" class="card-label"
-                                >April 3, 2023
-                              </label>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card card-img-holder">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-md-12">
-                              <img
-                                src="\assets/images/faces/support-ticket.png"
+                                src="../../assets/images/faces/support-ticket.png"
                                 class="me-2"
                                 alt="image"
                               />
@@ -178,7 +125,7 @@
                           <div class="row">
                             <div class="col-md-12">
                               <img
-                                src="\assets/images/faces/support-ticket.png"
+                                src="../../assets/images/faces/support-ticket.png"
                                 class="me-2"
                                 alt="image"
                               />
@@ -203,7 +150,60 @@
                           <div class="row">
                             <div class="col-md-12">
                               <img
-                                src="\assets/images/faces/support-ticket.png"
+                                src="../../assets/images/faces/support-ticket.png"
+                                class="me-2"
+                                alt="image"
+                              />
+                              <p class="card-label mt-4">
+                                Ticket #828792
+                                <a href="your-file-path">Download</a>
+                              </p>
+                              <label for="info" class="card-label"
+                                >Sara Carol: saracarol@gmail.com</label
+                              >
+                              <label for="date" class="card-label"
+                                >April 3, 2023
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card card-img-holder">
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="col-md-12">
+                              <img
+                                src="../../assets/images/faces/support-ticket.png"
+                                class="me-2"
+                                alt="image"
+                              />
+                              <p class="card-label mt-4">
+                                Ticket #828792
+                                <a href="your-file-path">Download</a>
+                              </p>
+                              <label for="info" class="card-label"
+                                >Sara Carol: saracarol@gmail.com</label
+                              >
+                              <label for="date" class="card-label"
+                                >April 3, 2023
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card card-img-holder">
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="col-md-12">
+                              <img
+                                src="../../assets/images/faces/support-ticket.png"
                                 class="me-2"
                                 alt="image"
                               />
@@ -239,7 +239,7 @@
                             <tr>
                               <td class="card-label">
                                 <img
-                                  src="\assets/images/faces/support-ticket.png"
+                                  src="../../assets/images/faces/support-ticket.png"
                                   class="me-3"
                                   alt="image"
                                 />Ticket #828792
@@ -255,7 +255,7 @@
                             <tr>
                               <td class="card-label">
                                 <img
-                                  src="\assets/images/faces/support-ticket.png"
+                                  src="../../assets/images/faces/support-ticket.png"
                                   class="me-3"
                                   alt="image"
                                 />Ticket #828792
@@ -271,7 +271,7 @@
                             <tr>
                               <td class="card-label">
                                 <img
-                                  src="\assets/images/faces/support-ticket.png"
+                                  src="../../assets/images/faces/support-ticket.png"
                                   class="me-3"
                                   alt="image"
                                 />Ticket #828792
@@ -287,7 +287,7 @@
                             <tr>
                               <td class="card-label">
                                 <img
-                                  src="\assets/images/faces/support-ticket.png"
+                                  src="../../assets/images/faces/support-ticket.png"
                                   class="me-3"
                                   alt="image"
                                 />Ticket #828792
@@ -303,7 +303,7 @@
                             <tr>
                               <td class="card-label">
                                 <img
-                                  src="\assets/images/faces/support-ticket.png"
+                                  src="../../assets/images/faces/support-ticket.png"
                                   class="me-3"
                                   alt="image"
                                 />Ticket #828792
@@ -319,7 +319,7 @@
                             <tr>
                               <td class="card-label">
                                 <img
-                                  src="\assets/images/faces/support-ticket.png"
+                                  src="../../assets/images/faces/support-ticket.png"
                                   class="me-3"
                                   alt="image"
                                 />Ticket #828792
@@ -335,7 +335,7 @@
                             <tr>
                               <td class="card-label">
                                 <img
-                                  src="\assets/images/faces/support-ticket.png"
+                                  src="../../assets/images/faces/support-ticket.png"
                                   class="me-3"
                                   alt="image"
                                 />Ticket #828792
@@ -351,7 +351,7 @@
                             <tr>
                               <td class="card-label">
                                 <img
-                                  src="\assets/images/faces/support-ticket.png"
+                                  src="../../assets/images/faces/support-ticket.png"
                                   class="me-3"
                                   alt="image"
                                 />Ticket #828792
